PAY-518: Mandatory and non mandatory fields + contrast ratio fix

--- a/src/main/public/stylesheets/feesCustom.css
+++ b/src/main/public/stylesheets/feesCustom.css
@@ -20,3 +20,8 @@
   margin-top: 10px;
   margin-bottom: 10px;
   padding: 12px 8px; }
+
+@media (min-width: 641px) {
+  .form-control {
+    font-size: 24px;
+    line-height: 1.31579; } }
